--- a/examples/four-visible-items-auto/index.html
+++ b/examples/four-visible-items-auto/index.html
@@ -25,7 +25,7 @@
             <li><img src="../images/img9.jpg" width="200" alt="" /></li>
             <li><img src="../images/img10.jpg" width="200" alt="" /></li>
           </ul>
-          <div class="photo-credits">Photos by <a href="http://www.flickr.com/photos/lunemazzo" target="_blank">Matheus Dalmazzo</a></div>
+          <!--div class="photo-credits">Photos by <a href="http://www.flickr.com/photos/lunemazzo" target="_blank">Matheus Dalmazzo</a></div-->
         </div>
       </div>
     </div>
