--- a/examples/four-visible-items-auto/index.html
+++ b/examples/four-visible-items-auto/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <script type="text/javascript" src="../../lib/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="../../lib/jquery.basic-carousel-0.0.1.js"></script>
+    <script type="text/javascript" src="../../lib/jquery.basic-carousel.js"></script>
 
     <script type="text/javascript">
       $(function(){
