update four visible items example

--- a/examples/four-visible-items-auto/index.html
+++ b/examples/four-visible-items-auto/index.html
@@ -35,7 +35,7 @@
 
     <script type="text/javascript">
       $(function(){
-        $('.div-my-carousel').basicCarousel({visibleItems: 4, autoPlay: true});
+        $('.div-my-carousel').basicCarousel({visible_items: 4, auto_play: true});
       });
     </script>
   </body>
